<resources>
    <string name="app_name" translatable="false">My Apps Updater 2.0</string>

    <string name="action_settings">Settings</string>
    <string name="no_internet">No connection available.</string>
    <string name="loading">Loading…</string>
    <string name="retry">RETRY</string>
    <string name="clear_app_data">Clear app data</string>
    <string name="kill_app">Kill app</string>
    <string name="uninstall_app">Uninstall app</string>
    <string name="error_occurred">An error is occurred</string>
    <string name="manage_app">Manage app</string>
    <string name="clipboard_message">Copied to clipboard:</string>
    <string name="root_required">To perform this action, root is need</string>
    <string name="root_not_granted">Root access not granted</string>
    <string name="unknown">Unknown</string>
    <string name="name">Name</string>
    <string name="package_name">Package name</string>
    <string name="description">Description</string>
    <string name="downloadlink">Download link</string>
    <string name="externalLink">External link</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="type">Type</string>
    <string name="langs">Available languages</string>
    <string name="versionname">Version name</string>
    <string name="versioncode">Version code</string>
    <string name="minapi">Minimum API</string>
    <string name="targetapi">Target API</string>
    <string name="what_now">What do you want to do now?</string>
    <string name="open">Open</string>
    <string name="download_apk">Downloading APK…</string>
    <string name="animations">Enable application animations</string>
    <string name="about">About</string>
    <string name="about_this_app">About this app</string>
    <string name="used_libraries">Used libraries</string>
    <string name="libraries">I used these library in this app</string>
    <string name="app_settings">App settings</string>
    <string name="already_dev">You are already developer!</string>
    <string name="now_developer">Now you are a developer!</string>
    <string name="steps_developer">You are now %d steps away from being a developer.</string>
    <string name="change_xml_file">Change XML file</string>
    <string name="change_xml_file_summary">Insert a link to another XML (list app) file</string>
    <string name="version">Version:</string>
    <string name="dev_mode">Developer mode</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="default_link">Default</string>
    <string name="download">Download</string>
    <string name="update">Update</string>
    <string name="warningVersion">WARNING! This app is in %1$s channel.\nThe app may be unstable.\nWould you %2$s it?</string>
    <string name="warning">WARNING!</string>
    <string name="connection_type">Download network type</string>
    <string name="app_download_3g">App will download/update via Wi-Fi and mobile network</string>
    <string name="app_download_wifi">App will download/update only via Wi-Fi</string>
    <string name="open_settings">Open settings…</string>
    <string name="only_wifi_warn">App cannot be downloaded because you\'re on mobile data. To download app via mobile data, disable this option in settings.</string>
    <string name="insert_link">Insert a valid link</string>
    <string name="visit_webpage">Visit webpage!</string>

</resources>
